--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="games/risk/risk_game.css">
     <link rel="stylesheet" href="games/dress_friend/dress_friend.css">
     <link rel="stylesheet" href="games/acting/acting.css">
-    <link rel="stylesheet" href="games/who_am_i/who_am_i.css">
+    <link rel="stylesheet" href="games/who_am_I/who_am_i.css">
     <link rel="stylesheet" href="games/lie_correctly/lie_correctly.css">
 </head>
 <body class="flex items-center justify-center p-4 sm:p-6 md:p-8 bg-gray-900">
@@ -183,7 +183,7 @@
     <div id="confetti-container"></div>
     <div id="score-popup"></div> 
 
-    <script src="core.js" defer></script>
+    <script src="Core.js" defer></script>
 </body>
 </html>
 <div id="tiebreaker-setup-screen" class="full-screen-overlay hidden">
